<resources>
    <string name="app_name">DayByNasa</string>
    <string name="search_on_wiki">Search On WiKi</string>
    <string name="helper_wiki_text">search on wikipedia</string>
    <string name="picture_of_the_day_description">Picture of the Day</string>
    <string name="menu_item_favorite_app_bar">favorite</string>
    <string name="menu_app_bar_search">Search</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_item_bottom_bar">Home</string>
    <string name="search_other_menu">Search</string>
    <string name="chip_current_day_text">Current Day</string>
    <string name="chip_previous_day_text">Previous Day</string>
    <string name="chip_info_day_text">Info Day</string>
    <string name="Menu_Toast_Text">Favorite menu</string>
    <string name="navigation_drawer_first_menu_string">Change On the Red Light Theme</string>
    <string name="navigation_drawer_second_menu_string">Change Theme On Dark Space</string>
    <!--Icons for media player-->
    <string name="pause_left">M26,23 V41</string>
    <string name="pause_right">M37,23 L37,32 L37,41</string>
    <string name="pause_right_play">M26,23 L41,32 L27,41</string>
    <string name="clockwise_circle">M32,8 A24,24 0 1 1 31.99,8 z</string>
    <string name="notes_hint_input">Enter your Note</string>
    <string name="haiden_description_text"><![CDATA[Some interesting story about about space creation, most popular lorem ipsum ever< I must to wrote about 20 lines..]]></string>
</resources>