<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/main"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/normal_padding"
            tools:context=".ui.MainFragment">

            <LinearLayout
                android:id="@+id/chips_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/input_layout"
                app:layout_constraintBottom_toTopOf="@id/picture_of_the_day"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">
                <com.google.android.material.chip.Chip
                    android:id="@+id/prev_day"
                    style="@style/Widget.MaterialComponents.Chip.Action"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_chip"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:textAlignment="center"
                    android:text="@string/chip_previous_day_text"/>
                <com.google.android.material.chip.Chip
                    android:id="@+id/current_day"
                    style="@style/Widget.MaterialComponents.Chip.Action"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_chip"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:textAlignment="center"
                    android:text="@string/chip_current_day_text"/>
                <com.google.android.material.chip.Chip
                    android:id="@+id/info_day"
                    style="@style/Widget.MaterialComponents.Chip.Action"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_chip"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:textAlignment="center"
                    android:text="@string/chip_info_day_text"/>

            </LinearLayout>
            <ImageView
                android:id="@+id/picture_of_the_day"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/picture_of_the_day_description"
                android:fitsSystemWindows="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/chips_group" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/search_on_wiki"
                android:padding="20dp"
                app:boxCornerRadiusBottomStart="20dp"
                app:boxCornerRadiusTopEnd="20dp"
                app:counterEnabled="true"
                app:counterMaxLength="20"
                app:endIconCheckable="true"
                app:endIconDrawable="@android:drawable/ic_menu_search"
                app:endIconMode="custom"
                app:helperText="@string/helper_wiki_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <include
        layout="@layout/bottomsheet_layout" />

    <com.google.android.material.bottomappbar.BottomAppBar
        android:id="@+id/bottom_app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hideOnScroll="true"
        app:layout_scrollFlags="scroll|enterAlways"
        android:layout_gravity="bottom"
        android:backgroundTint="@color/design_default_color_primary"
        app:fabAlignmentMode="center"
        app:navigationIcon="@android:drawable/ic_menu_add" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/cardview_shadow_end_color"
        android:src="@drawable/ic_plus_fab"
        android:tint="#FFFFFF"
        app:elevation="1dp"
        app:hoveredFocusedTranslationZ="1dp"
        app:layout_anchor="@id/bottom_app_bar" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>
